[css-sizing] wrong intrinsic size with white-space:nowrap and trailing white-space
Categories
(Core :: Layout: Block and Inline, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox67 | --- | unaffected |
| firefox68 | --- | unaffected |
| firefox69 | + | fixed |
People
(Reporter: heycam, Assigned: MatsPalmgren_bugz)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
See the screen shot.
2:48.09 INFO: First bad revision: 750046b87c63930678adff852290f1b1f76b534c
2:48.09 INFO: Pushlog:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=d6e4e46dde44d7745040216569ed81546fb450d3&tochange=750046b87c63930678adff852290f1b1f76b534c
Comment 1•7 years ago
|
||
Ugh - I was just going to report this, and found it already filed.
I think the problem is https://dxr.mozilla.org/mozilla-central/rev/c909c105f914f69054b9a7c6b189ee39fa1cad44/layout/generic/nsBlockFrame.cpp#779-781. We probably need to guard this with some additional style checks -- e.g. we shouldn't do it if white-space:nowrap is in effect.
Updated•7 years ago
|
Updated•7 years ago
|
| Assignee | ||
Comment 3•7 years ago
|
||
Bah, I thought OptionallyBreak() would deal with that somehow, but I forgot to check...
(amazing that we have zero tests for this :-))
| Assignee | ||
Comment 4•7 years ago
|
||
| Assignee | ||
Comment 5•7 years ago
|
||
| Assignee | ||
Updated•7 years ago
|
Comment 10•7 years ago
|
||
| bugherder | ||
Description
•