Bug 1556709 - Only call OptionallyBreak() if we may break at white-space.  r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D33718